[CHORE]: fix nestjs lib version

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
-    "cache-manager": "^7.0.0",
+    "@nestjs/cache-manager": "3.0.1",
+    "@nestjs/common": "11.0.1",
+    "@nestjs/core": "11.0.1",
+    "@nestjs/platform-express": "11.0.1",
+    "cache-manager": "7.0.0",
     "heapdump": "^0.3.15",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
